crates/zenith/tests/snapshots/screens__envelope_viewer__160x48__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
┌ call 3 · solar.ping · 0.52 ms ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ request  sent 15:47:42.001 UTC                                                                                                                               │
│ {                                                                                                                                                            │
│   "jsonrpc": "2.0",                                                                                                                                          │
│   "id": 3,                                                                                                                                                   │
│   "method": "solar.ping",                                                                                                                                    │
│   "params": {                                                                                                                                                │
│     "message": "hello"                                                                                                                                       │
│   }                                                                                                                                                          │
│ }                                                                                                                                                            │
│                                                                                                                                                              │
│ response  received 15:47:42.002 UTC                                                                                                                          │
│ {                                                                                                                                                            │
│   "jsonrpc": "2.0",                                                                                                                                          │
│   "id": 3,                                                                                                                                                   │
│   "result": {                                                                                                                                                │
│     "data": {                                                                                                                                                │
│       "echo": "hello",                                                                                                                                       │
│       "pong": true,                                                                                                                                          │
│       "received_at": "2026-09-27T15:47:42.100521Z"                                                                                                           │
│     },                                                                                                                                                       │
│     "meta": {                                                                                                                                                │
│       "request_id": 3,                                                                                                                                       │
│       "method": "solar.ping",                                                                                                                                │
│       "api_version": "1.0.0",                                                                                                                                │
│       "solar_version": "0.1.0",                                                                                                                              │
│       "protocol": "solar/1",                                                                                                                                 │
│       "started_at": "2026-09-27T15:47:00.000000Z",                                                                                                           │
│       "duration_us": 170,                                                                                                                                    │
│       "os": "windows",                                                                                                                                       │
│       "arch": "x86_64"                                                                                                                                       │
│     },                                                                                                                                                       │
│     "warnings": []                                                                                                                                           │
│   }                                                                                                                                                          │
│ }                                                                                                                                                            │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└ ← → other calls  Esc close  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.52 ms ─── in orbit 42s ───────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-152 #868482 on #F5F1E8
 0:153-153 #8C4907 on #F5F1E8 bold
 0:154-159 #555355 on #F5F1E8
 1:  0-0   #868482 on #F5F1E8
 1:  1-31  #8C4907 on #F5F1E8 bold
 1: 32-159 #868482 on #F5F1E8
 2:  0-0   #868482 on #F5F1E8
 2:  2-8   #8C4907 on #F5F1E8 bold
 2:  9-31  #555355 on #F5F1E8
 2:159-159 #868482 on #F5F1E8
 3:  0-0   #868482 on #F5F1E8
 3:  2-2   #555355 on #F5F1E8
 3:159-159 #868482 on #F5F1E8
 4:  0-0   #868482 on #F5F1E8
 4:  4-12  #8C4907 on #F5F1E8
 4: 13-14  #555355 on #F5F1E8
 4: 20-20  #555355 on #F5F1E8
 4:159-159 #868482 on #F5F1E8
 5:  0-0   #868482 on #F5F1E8
 5:  4-7   #8C4907 on #F5F1E8
 5:  8-9   #555355 on #F5F1E8
 5: 10-10  #17161C on #F5F1E8 bold
 5: 11-11  #555355 on #F5F1E8
 5:159-159 #868482 on #F5F1E8
 6:  0-0   #868482 on #F5F1E8
 6:  4-11  #8C4907 on #F5F1E8
 6: 12-13  #555355 on #F5F1E8
 6: 26-26  #555355 on #F5F1E8
 6:159-159 #868482 on #F5F1E8
 7:  0-0   #868482 on #F5F1E8
 7:  4-11  #8C4907 on #F5F1E8
 7: 12-14  #555355 on #F5F1E8
 7:159-159 #868482 on #F5F1E8
 8:  0-0   #868482 on #F5F1E8
 8:  6-14  #8C4907 on #F5F1E8
 8: 15-16  #555355 on #F5F1E8
 8:159-159 #868482 on #F5F1E8
 9:  0-0   #868482 on #F5F1E8
 9:  4-4   #555355 on #F5F1E8
 9:159-159 #868482 on #F5F1E8
10:  0-0   #868482 on #F5F1E8
10:  2-2   #555355 on #F5F1E8
10:159-159 #868482 on #F5F1E8
11:  0-0   #868482 on #F5F1E8
11:159-159 #868482 on #F5F1E8
12:  0-0   #868482 on #F5F1E8
12:  2-9   #8C4907 on #F5F1E8 bold
12: 10-36  #555355 on #F5F1E8
12:159-159 #868482 on #F5F1E8
13:  0-0   #868482 on #F5F1E8
13:  2-2   #555355 on #F5F1E8
13:159-159 #868482 on #F5F1E8
14:  0-0   #868482 on #F5F1E8
14:  4-12  #8C4907 on #F5F1E8
14: 13-14  #555355 on #F5F1E8
14: 20-20  #555355 on #F5F1E8
14:159-159 #868482 on #F5F1E8
15:  0-0   #868482 on #F5F1E8
15:  4-7   #8C4907 on #F5F1E8
15:  8-9   #555355 on #F5F1E8
15: 10-10  #17161C on #F5F1E8 bold
15: 11-11  #555355 on #F5F1E8
15:159-159 #868482 on #F5F1E8
16:  0-0   #868482 on #F5F1E8
16:  4-11  #8C4907 on #F5F1E8
16: 12-14  #555355 on #F5F1E8
16:159-159 #868482 on #F5F1E8
17:  0-0   #868482 on #F5F1E8
17:  6-11  #8C4907 on #F5F1E8
17: 12-14  #555355 on #F5F1E8
17:159-159 #868482 on #F5F1E8
18:  0-0   #868482 on #F5F1E8
18:  8-13  #8C4907 on #F5F1E8
18: 14-15  #555355 on #F5F1E8
18: 23-23  #555355 on #F5F1E8
18:159-159 #868482 on #F5F1E8
19:  0-0   #868482 on #F5F1E8
19:  8-13  #8C4907 on #F5F1E8
19: 14-15  #555355 on #F5F1E8
19: 16-19  #17161C on #F5F1E8 bold
19: 20-20  #555355 on #F5F1E8
19:159-159 #868482 on #F5F1E8
20:  0-0   #868482 on #F5F1E8
20:  8-20  #8C4907 on #F5F1E8
20: 21-22  #555355 on #F5F1E8
20:159-159 #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  6-7   #555355 on #F5F1E8
21:159-159 #868482 on #F5F1E8
22:  0-0   #868482 on #F5F1E8
22:  6-11  #8C4907 on #F5F1E8
22: 12-14  #555355 on #F5F1E8
22:159-159 #868482 on #F5F1E8
23:  0-0   #868482 on #F5F1E8
23:  8-19  #8C4907 on #F5F1E8
23: 20-21  #555355 on #F5F1E8
23: 22-22  #17161C on #F5F1E8 bold
23: 23-23  #555355 on #F5F1E8
23:159-159 #868482 on #F5F1E8
24:  0-0   #868482 on #F5F1E8
24:  8-15  #8C4907 on #F5F1E8
24: 16-17  #555355 on #F5F1E8
24: 30-30  #555355 on #F5F1E8
24:159-159 #868482 on #F5F1E8
25:  0-0   #868482 on #F5F1E8
25:  8-20  #8C4907 on #F5F1E8
25: 21-22  #555355 on #F5F1E8
25: 30-30  #555355 on #F5F1E8
25:159-159 #868482 on #F5F1E8
26:  0-0   #868482 on #F5F1E8
26:  8-22  #8C4907 on #F5F1E8
26: 23-24  #555355 on #F5F1E8
26: 32-32  #555355 on #F5F1E8
26:159-159 #868482 on #F5F1E8
27:  0-0   #868482 on #F5F1E8
27:  8-17  #8C4907 on #F5F1E8
27: 18-19  #555355 on #F5F1E8
27: 29-29  #555355 on #F5F1E8
27:159-159 #868482 on #F5F1E8
28:  0-0   #868482 on #F5F1E8
28:  8-19  #8C4907 on #F5F1E8
28: 20-21  #555355 on #F5F1E8
28: 51-51  #555355 on #F5F1E8
28:159-159 #868482 on #F5F1E8
29:  0-0   #868482 on #F5F1E8
29:  8-20  #8C4907 on #F5F1E8
29: 21-22  #555355 on #F5F1E8
29: 23-25  #17161C on #F5F1E8 bold
29: 26-26  #555355 on #F5F1E8
29:159-159 #868482 on #F5F1E8
30:  0-0   #868482 on #F5F1E8
30:  8-11  #8C4907 on #F5F1E8
30: 12-13  #555355 on #F5F1E8
30: 23-23  #555355 on #F5F1E8
30:159-159 #868482 on #F5F1E8
31:  0-0   #868482 on #F5F1E8
31:  8-13  #8C4907 on #F5F1E8
31: 14-15  #555355 on #F5F1E8
31:159-159 #868482 on #F5F1E8
32:  0-0   #868482 on #F5F1E8
32:  6-7   #555355 on #F5F1E8
32:159-159 #868482 on #F5F1E8
33:  0-0   #868482 on #F5F1E8
33:  6-15  #8C4907 on #F5F1E8
33: 16-17  #555355 on #F5F1E8
33: 18-19  #17161C on #F5F1E8 bold
33:159-159 #868482 on #F5F1E8
34:  0-0   #868482 on #F5F1E8
34:  4-4   #555355 on #F5F1E8
34:159-159 #868482 on #F5F1E8
35:  0-0   #868482 on #F5F1E8
35:  2-2   #555355 on #F5F1E8
35:159-159 #868482 on #F5F1E8
36:  0-0   #868482 on #F5F1E8
36:159-159 #868482 on #F5F1E8
37:  0-0   #868482 on #F5F1E8
37:159-159 #868482 on #F5F1E8
38:  0-0   #868482 on #F5F1E8
38:159-159 #868482 on #F5F1E8
39:  0-0   #868482 on #F5F1E8
39:159-159 #868482 on #F5F1E8
40:  0-0   #868482 on #F5F1E8
40:159-159 #868482 on #F5F1E8
41:  0-0   #868482 on #F5F1E8
41:159-159 #868482 on #F5F1E8
42:  0-0   #868482 on #F5F1E8
42:159-159 #868482 on #F5F1E8
43:  0-0   #868482 on #F5F1E8
43:159-159 #868482 on #F5F1E8
44:  0-0   #868482 on #F5F1E8
44:159-159 #868482 on #F5F1E8
45:  0-0   #868482 on #F5F1E8
45:159-159 #868482 on #F5F1E8
46:  0-1   #868482 on #F5F1E8
46:  2-4   #8C4907 on #F5F1E8 bold
46:  5-18  #555355 on #F5F1E8
46: 19-21  #8C4907 on #F5F1E8 bold
46: 22-29  #555355 on #F5F1E8
46: 30-159 #868482 on #F5F1E8
47:  0-2   #868482 on #F5F1E8
47:  3-3   #8C4907 on #F5F1E8
47:  4-6   #868482 on #F5F1E8
47:  7-17  #8C4907 on #F5F1E8 bold
47: 18-20  #555355 on #F5F1E8
47: 28-32  #868482 on #F5F1E8
47: 33-42  #555355 on #F5F1E8
47: 50-54  #868482 on #F5F1E8
47: 55-63  #555355 on #F5F1E8
47: 67-159 #868482 on #F5F1E8
