crates/zenith/tests/snapshots/screens__envelope_viewer__160x48__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
┌ call 3 · solar.ping · 0.52 ms ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ request  sent 15:47:42.001 UTC                                                                                                                               │
│ {                                                                                                                                                            │
│   "jsonrpc": "2.0",                                                                                                                                          │
│   "id": 3,                                                                                                                                                   │
│   "method": "solar.ping",                                                                                                                                    │
│   "params": {                                                                                                                                                │
│     "message": "hello"                                                                                                                                       │
│   }                                                                                                                                                          │
│ }                                                                                                                                                            │
│                                                                                                                                                              │
│ response  received 15:47:42.002 UTC                                                                                                                          │
│ {                                                                                                                                                            │
│   "jsonrpc": "2.0",                                                                                                                                          │
│   "id": 3,                                                                                                                                                   │
│   "result": {                                                                                                                                                │
│     "data": {                                                                                                                                                │
│       "echo": "hello",                                                                                                                                       │
│       "pong": true,                                                                                                                                          │
│       "received_at": "2026-09-27T15:47:42.100521Z"                                                                                                           │
│     },                                                                                                                                                       │
│     "meta": {                                                                                                                                                │
│       "request_id": 3,                                                                                                                                       │
│       "method": "solar.ping",                                                                                                                                │
│       "api_version": "1.0.0",                                                                                                                                │
│       "solar_version": "0.1.0",                                                                                                                              │
│       "protocol": "solar/1",                                                                                                                                 │
│       "started_at": "2026-09-27T15:47:00.000000Z",                                                                                                           │
│       "duration_us": 170,                                                                                                                                    │
│       "os": "windows",                                                                                                                                       │
│       "arch": "x86_64"                                                                                                                                       │
│     },                                                                                                                                                       │
│     "warnings": []                                                                                                                                           │
│   }                                                                                                                                                          │
│ }                                                                                                                                                            │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└ ← → other calls  Esc close  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.52 ms ─── in orbit 42s ───────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 21-26  #9C9A97 on #0B0C14
 0: 29-33  #9C9A97 on #0B0C14
 0: 36-44  #9C9A97 on #0B0C14
 0: 45-152 #646365 on #0B0C14
 0:153-153 #FFC23D on #0B0C14 bold
 0:154-159 #9C9A97 on #0B0C14
 1:  0-0   #646365 on #0B0C14
 1:  1-31  #FFC23D on #0B0C14 bold
 1: 32-159 #646365 on #0B0C14
 2:  0-0   #646365 on #0B0C14
 2:  2-8   #FFC23D on #0B0C14 bold
 2:  9-31  #9C9A97 on #0B0C14
 2:159-159 #646365 on #0B0C14
 3:  0-0   #646365 on #0B0C14
 3:  2-2   #9C9A97 on #0B0C14
 3:159-159 #646365 on #0B0C14
 4:  0-0   #646365 on #0B0C14
 4:  4-12  #FFC23D on #0B0C14
 4: 13-14  #9C9A97 on #0B0C14
 4: 20-20  #9C9A97 on #0B0C14
 4:159-159 #646365 on #0B0C14
 5:  0-0   #646365 on #0B0C14
 5:  4-7   #FFC23D on #0B0C14
 5:  8-9   #9C9A97 on #0B0C14
 5: 10-10  #F5F1E8 on #0B0C14 bold
 5: 11-11  #9C9A97 on #0B0C14
 5:159-159 #646365 on #0B0C14
 6:  0-0   #646365 on #0B0C14
 6:  4-11  #FFC23D on #0B0C14
 6: 12-13  #9C9A97 on #0B0C14
 6: 26-26  #9C9A97 on #0B0C14
 6:159-159 #646365 on #0B0C14
 7:  0-0   #646365 on #0B0C14
 7:  4-11  #FFC23D on #0B0C14
 7: 12-14  #9C9A97 on #0B0C14
 7:159-159 #646365 on #0B0C14
 8:  0-0   #646365 on #0B0C14
 8:  6-14  #FFC23D on #0B0C14
 8: 15-16  #9C9A97 on #0B0C14
 8:159-159 #646365 on #0B0C14
 9:  0-0   #646365 on #0B0C14
 9:  4-4   #9C9A97 on #0B0C14
 9:159-159 #646365 on #0B0C14
10:  0-0   #646365 on #0B0C14
10:  2-2   #9C9A97 on #0B0C14
10:159-159 #646365 on #0B0C14
11:  0-0   #646365 on #0B0C14
11:159-159 #646365 on #0B0C14
12:  0-0   #646365 on #0B0C14
12:  2-9   #FFC23D on #0B0C14 bold
12: 10-36  #9C9A97 on #0B0C14
12:159-159 #646365 on #0B0C14
13:  0-0   #646365 on #0B0C14
13:  2-2   #9C9A97 on #0B0C14
13:159-159 #646365 on #0B0C14
14:  0-0   #646365 on #0B0C14
14:  4-12  #FFC23D on #0B0C14
14: 13-14  #9C9A97 on #0B0C14
14: 20-20  #9C9A97 on #0B0C14
14:159-159 #646365 on #0B0C14
15:  0-0   #646365 on #0B0C14
15:  4-7   #FFC23D on #0B0C14
15:  8-9   #9C9A97 on #0B0C14
15: 10-10  #F5F1E8 on #0B0C14 bold
15: 11-11  #9C9A97 on #0B0C14
15:159-159 #646365 on #0B0C14
16:  0-0   #646365 on #0B0C14
16:  4-11  #FFC23D on #0B0C14
16: 12-14  #9C9A97 on #0B0C14
16:159-159 #646365 on #0B0C14
17:  0-0   #646365 on #0B0C14
17:  6-11  #FFC23D on #0B0C14
17: 12-14  #9C9A97 on #0B0C14
17:159-159 #646365 on #0B0C14
18:  0-0   #646365 on #0B0C14
18:  8-13  #FFC23D on #0B0C14
18: 14-15  #9C9A97 on #0B0C14
18: 23-23  #9C9A97 on #0B0C14
18:159-159 #646365 on #0B0C14
19:  0-0   #646365 on #0B0C14
19:  8-13  #FFC23D on #0B0C14
19: 14-15  #9C9A97 on #0B0C14
19: 16-19  #F5F1E8 on #0B0C14 bold
19: 20-20  #9C9A97 on #0B0C14
19:159-159 #646365 on #0B0C14
20:  0-0   #646365 on #0B0C14
20:  8-20  #FFC23D on #0B0C14
20: 21-22  #9C9A97 on #0B0C14
20:159-159 #646365 on #0B0C14
21:  0-0   #646365 on #0B0C14
21:  6-7   #9C9A97 on #0B0C14
21:159-159 #646365 on #0B0C14
22:  0-0   #646365 on #0B0C14
22:  6-11  #FFC23D on #0B0C14
22: 12-14  #9C9A97 on #0B0C14
22:159-159 #646365 on #0B0C14
23:  0-0   #646365 on #0B0C14
23:  8-19  #FFC23D on #0B0C14
23: 20-21  #9C9A97 on #0B0C14
23: 22-22  #F5F1E8 on #0B0C14 bold
23: 23-23  #9C9A97 on #0B0C14
23:159-159 #646365 on #0B0C14
24:  0-0   #646365 on #0B0C14
24:  8-15  #FFC23D on #0B0C14
24: 16-17  #9C9A97 on #0B0C14
24: 30-30  #9C9A97 on #0B0C14
24:159-159 #646365 on #0B0C14
25:  0-0   #646365 on #0B0C14
25:  8-20  #FFC23D on #0B0C14
25: 21-22  #9C9A97 on #0B0C14
25: 30-30  #9C9A97 on #0B0C14
25:159-159 #646365 on #0B0C14
26:  0-0   #646365 on #0B0C14
26:  8-22  #FFC23D on #0B0C14
26: 23-24  #9C9A97 on #0B0C14
26: 32-32  #9C9A97 on #0B0C14
26:159-159 #646365 on #0B0C14
27:  0-0   #646365 on #0B0C14
27:  8-17  #FFC23D on #0B0C14
27: 18-19  #9C9A97 on #0B0C14
27: 29-29  #9C9A97 on #0B0C14
27:159-159 #646365 on #0B0C14
28:  0-0   #646365 on #0B0C14
28:  8-19  #FFC23D on #0B0C14
28: 20-21  #9C9A97 on #0B0C14
28: 51-51  #9C9A97 on #0B0C14
28:159-159 #646365 on #0B0C14
29:  0-0   #646365 on #0B0C14
29:  8-20  #FFC23D on #0B0C14
29: 21-22  #9C9A97 on #0B0C14
29: 23-25  #F5F1E8 on #0B0C14 bold
29: 26-26  #9C9A97 on #0B0C14
29:159-159 #646365 on #0B0C14
30:  0-0   #646365 on #0B0C14
30:  8-11  #FFC23D on #0B0C14
30: 12-13  #9C9A97 on #0B0C14
30: 23-23  #9C9A97 on #0B0C14
30:159-159 #646365 on #0B0C14
31:  0-0   #646365 on #0B0C14
31:  8-13  #FFC23D on #0B0C14
31: 14-15  #9C9A97 on #0B0C14
31:159-159 #646365 on #0B0C14
32:  0-0   #646365 on #0B0C14
32:  6-7   #9C9A97 on #0B0C14
32:159-159 #646365 on #0B0C14
33:  0-0   #646365 on #0B0C14
33:  6-15  #FFC23D on #0B0C14
33: 16-17  #9C9A97 on #0B0C14
33: 18-19  #F5F1E8 on #0B0C14 bold
33:159-159 #646365 on #0B0C14
34:  0-0   #646365 on #0B0C14
34:  4-4   #9C9A97 on #0B0C14
34:159-159 #646365 on #0B0C14
35:  0-0   #646365 on #0B0C14
35:  2-2   #9C9A97 on #0B0C14
35:159-159 #646365 on #0B0C14
36:  0-0   #646365 on #0B0C14
36:159-159 #646365 on #0B0C14
37:  0-0   #646365 on #0B0C14
37:159-159 #646365 on #0B0C14
38:  0-0   #646365 on #0B0C14
38:159-159 #646365 on #0B0C14
39:  0-0   #646365 on #0B0C14
39:159-159 #646365 on #0B0C14
40:  0-0   #646365 on #0B0C14
40:159-159 #646365 on #0B0C14
41:  0-0   #646365 on #0B0C14
41:159-159 #646365 on #0B0C14
42:  0-0   #646365 on #0B0C14
42:159-159 #646365 on #0B0C14
43:  0-0   #646365 on #0B0C14
43:159-159 #646365 on #0B0C14
44:  0-0   #646365 on #0B0C14
44:159-159 #646365 on #0B0C14
45:  0-0   #646365 on #0B0C14
45:159-159 #646365 on #0B0C14
46:  0-1   #646365 on #0B0C14
46:  2-4   #FFC23D on #0B0C14 bold
46:  5-18  #9C9A97 on #0B0C14
46: 19-21  #FFC23D on #0B0C14 bold
46: 22-29  #9C9A97 on #0B0C14
46: 30-159 #646365 on #0B0C14
47:  0-2   #646365 on #0B0C14
47:  3-3   #FFC23D on #0B0C14
47:  4-6   #646365 on #0B0C14
47:  7-17  #FFC23D on #0B0C14 bold
47: 18-20  #9C9A97 on #0B0C14
47: 28-32  #646365 on #0B0C14
47: 33-42  #9C9A97 on #0B0C14
47: 50-54  #646365 on #0B0C14
47: 55-63  #9C9A97 on #0B0C14
47: 67-159 #646365 on #0B0C14
